kubernetes/cluster-prometheus/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-prometheus-deployment
  namespace: cluster-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
          ports:
            - containerPort: 9090
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: config-volume
          configMap:
            name: cluster-prometheus-config
      serviceAccountName: cluster-prometheus
