kubernetes/cluster-prometheus/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-prometheus-service
  namespace: cluster-prometheus
spec:
  selector:
    app: prometheus
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
  type: ClusterIP
