kubernetes/cluster-prometheus/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-prometheus-ingress
  namespace: cluster-prometheus
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/schema: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: prometheus
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: cluster-prometheus-service
                port:
                  number: 80
